--- a/Assignment-3&4/Assignment-3/src/PDS_Assignment_3.ipynb
+++ b/Assignment-3&4/Assignment-3/src/PDS_Assignment_3.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/PavanPratapagiri/PDSAssignment/blob/main/Assignment-3%264/Assignment-3/src/PDS_Assignment_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/PavanPratapagiri/PDSAssignment/blob/main/Assignment-3%264/Assignment-4/src/PDS_Assignment_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -117,11 +117,30 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "#downloading the response.json\n",
+        "import json\n",
+        "\n",
+        "url = \"https://sportspage-feeds.p.rapidapi.com/rankings\"\n",
+        "\n",
+        "querystring = {\"league\":\"NCAAF\"}\n",
+        "\n",
+        "headers = {\n",
+        "\t\"X-RapidAPI-Key\": \"2233528b1dmsh8d748e99b519012p1c55d6jsncb48593d3f18\",\n",
+        "\t\"X-RapidAPI-Host\": \"sportspage-feeds.p.rapidapi.com\"\n",
+        "}\n",
+        "\n",
+        "response = requests.get(url, headers=headers, params=querystring)\n",
+        "\n",
+        "with open('response.json', 'w') as f:\n",
+        "    json.dump(response.json(), f)\n"
+      ],
       "metadata": {
-        "id": "b1_lGIZ6sVtp"
-      }
+        "id": "PSDPc1GLOhCo"
+      },
+      "execution_count": 33,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -129,7 +148,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 671
+          "height": 672
         },
         "id": "gCb2c-11jf5C",
         "outputId": "d3f7b319-2955-4289-82fe-fa7b60783f72"
@@ -233,7 +252,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBeDyAg7oN6CAZXK+EFurL",
+      "authorship_tag": "ABX9TyNXgV+b/U+Gg0sxMJqV32ko",
       "include_colab_link": true
     },
     "kernelspec": {
